--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="card">
         <div class="content">
-            <img src="images/pfp.jpg" alt="Profile Picture" class="pfp" onclick="(document.getElementById('language-toggle').unchecked) ? alert('Aqueles que não arriscam nada, não fazem nada, não têm nada, e não são nada.') : alert('Those who risk nothing, do nothing, have nothing, and are nothing.')">
+            <img src="images/pfp.jpg" alt="Profile Picture" class="pfp" onclick="(!document.getElementById('language-toggle').checked) ? alert('Aqueles que não arriscam nada, não fazem nada, não têm nada, e não são nada.') : alert('Those who risk nothing, do nothing, have nothing, and are nothing.')">
             <div class="name">
                 <h1>André Santos Vasconcelos</h1>
                 <h3>Vancelos</h3>
